<resources>
    <string name="app_name">Memorize</string>
    <string name="sumHint1">Operando 1</string>
    <string name="sumHint2">Operando 2</string>
    <string name="resultHint">Resultado...</string>
    <string name="play">¡Jugar!</string>
    <string name="emptyOperand">¡Operando vacío!</string>
    <string name="start">Empezar!</string>
    <string name="no_statistics">No se han encontrado estadísticas.</string>
    <string name="ok">Ok</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_failed">La conexión con el servidor ha fallado.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="please_log_in">Login here!</string>
    <string name="your_name">Your name...</string>
    <string name="log_in">Log In</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="ensure_exit">Seguro que quieres salir?</string>
</resources>