<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/ensure_exit"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/closeAppButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/cancelCloseApp"
            android:layout_margin="10dp"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>