<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="35sp"
            android:text="@string/please_log_in" />

        <EditText
            android:id="@+id/logInName"
            android:layout_weight="1"
            android:inputType="text"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:layout_margin="90dp"
            android:hint="@string/your_name"
            />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="115dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="90dp"
            android:layout_gravity="center"
            android:text="@string/log_in"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>