<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/sum1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberSigned"
                android:hint="@string/sumHint1"/>

            <EditText
                android:id="@+id/sum2"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/sumHint2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/sumaButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:hint="@string/sumHint1"
                android:textSize="40sp"
                android:backgroundTint="@color/dorado_borde_carta"
                android:text="+"/>

            <Button
                android:id="@+id/multButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:backgroundTint="@color/dorado_borde_carta"
                android:text="X"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:hint="@string/resultHint"
                 />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
